--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,12 @@
+// top menu sizes
+.nav-item {
+	margin-top: 3px;
+	font-size: 16px;
+}
+
+.card-text {
+	font-size: 14px !important;
+}
 
 .why h1 {
 	text-align: center;
