--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,8 +4,9 @@
 	font-size: 16px;
 }
 
-.card-text {
-	font-size: 14px !important;
+// press cards
+.experience .card-text, .experience .card-text p {
+	font-size: 16px !important;
 }
 
 .why h1 {
