--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -18,13 +18,15 @@
 .why .container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 }
 
 .why .item {
-	flex: 0 48%;
+	flex: 1;
+	flex-basis: 40%;
+	min-width: 250px;
 	display: flex;
-	margin-bottom: 4%; /* (100-32*3)/2 */
+	margin: 20px;
 	text-align: left;
 }
 
