--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,7 +6,7 @@
 
 // press cards
 .experience .card-text, .experience .card-text p {
-	font-size: 16px !important;
+	font-size: 90% !important;
 }
 
 .why h1 {
